Revert "added image tag plugin taggd.js along with js code that displays tags on top of image, styling removed to prevent image from covering its container"
This reverts commit 8aee594aa967efe795e9bb89f35a28dcb50c0084.

--- a/app/assets/stylesheets/questions-page.scss
+++ b/app/assets/stylesheets/questions-page.scss
@@ -1,6 +1,7 @@
 .share-image-container {
   position: relative;
   background-color: #1C1C1C;
+  width: 70%;
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 100px;
@@ -12,13 +13,11 @@
 
 
     .image-container {
-      overflow: hidden;
       display: flex;
       align-items: center;
       background-color: #1C1C1C;
       width: 100%;
       height: 75vh;
-
 
       .shared-photo {
         display: block;
@@ -44,7 +43,7 @@
   margin-right: auto;
   background-color: white;
   display: inline-block;
-  height: 100%;
+  height: 32px;
 
   .show-tag{
     color: white;
